fix - Fixing a about and promo section on tablet

--- a/src/sections/about/style.css
+++ b/src/sections/about/style.css
@@ -65,15 +65,9 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 886px) {
   .about {
     margin-bottom: 5rem;
-  }
-
-  .about__wrapper {
-    flex-direction: column;
-    align-items: center;
-    gap: 4rem;
   }
 
   .about__greeting {
@@ -83,6 +77,11 @@
 
   .about__left {
     width: 100%;
+  }
+  .about__wrapper {
+    flex-direction: column;
+    align-items: center;
+    gap: 4rem;
   }
 }
 
